# AI

./: .gitignore  AI知识图谱.xmind  README.md
agent/prompt/: client_mcp_prompt_zh.txt  mauns_agent_prompt.txt
code/mcp-study/: pyproject.toml  sse_client.py  sse_server.py  stdio_server.py
code/multiagent/: .gitignore  .model-config  pyproject.toml
code/multiagent/multiagent/agents/: main.py
code/multiagent/multiagent/agents/adk/: session_service.py  single_agent.py  sub_agent.py
code/multiagent/multiagent/agents/google_adk/: __main__.py  agent.py  agent_executor.py
code/multiagent/multiagent/agents/host_agent/: agent.py  remote_agent_connection.py
code/multiagent/multiagent/agents/langgraph/plan_and_execute/: started.py
code/multiagent/multiagent/agents/models/request/: base.py  chat.py
code/multiagent/multiagent/agents/models/response/: base.py
code/multiagent/multiagent/agents/server/: base.py
code/multiagent/multiagent/fine_tuning/: llm_chat_data_generate_v1.py  llm_chat_data_generate_v2.py  llm_chat_data_ui.html
code/multiagent/multiagent/langchain/: agent.py  chat_bot_quick_start.py  langchain_mcp_agent.py  quick_start.py  rag.py  structured_output.py
code/multiagent/multiagent/langchain/faiss_index/: index.faiss  index.pkl
code/multiagent/multiagent/langchain/langgraph/: 1.basic_agent.py  2.tools_agent.py  3.memory_agent.py  4.human_loop_agent.py  langchain对话消息管理机制.md
code/multiagent/multiagent/langchain/study-doc/: 2.各类模型接入LangChain流程.ipynb  3.LangChain链条创建与LCEL语法.ipynb  4.LangChain记忆存储与搭建多轮对话机器人.ipynb  5.LangChain接入工具流程.ipynb  6.LangChain Agent进阶功能介绍.ipynb  7.LangChain接入MCP完整实现流程.ipynb  8.LangChain+RAG技术实战.ipynb  9.LangChain搭建AI数据分析助手.ipynb
code/multiagent/multiagent/llm/: llm_api.py
code/multiagent/multiagent/mcp/: sse_client.py  sse_server.py  standard_common_tool_server.py  standard_multi_mcp_client.py  standard_write_server.py  stdio_client.py  stdio_server.py
code/multiagent/multiagent/rag/: settings.yaml
code/multiagent/multiagent/rag/input/: book.txt
code/multiagent/multiagent/rag/logs/: logs.txt
code/multiagent/multiagent/rag/trag/: demo.py
code/multiagent/multiagent/utils/: common_util.py  http_util.py
fine-tuning/: README.md
(+21 files in other folders)
