[project]
name = "multiagent"
version = "0.1.0"
description = "agents over the A2A protocol."
readme = "README.md"
requires-python = ">=3.10,<3.13"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langgraph = "^0.6.2"
langchain = "^0.3.27"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.28"
tavily-python = "^0.7.10"
openai = "^1.97.1"
#trag-client = "^0.9.3"
#venus-sdk = "^1.3.31"
#trag = "^0.0.52"
#trag-langchain = "^0.0.52"
python-dotenv = "^1.1.1"
langchain-deepseek = "^0.1.4"
beautifulsoup4 = "^4.13.4"
mcp = "^1.12.3"
langchain-chroma = "^0.2.5"
faiss-cpu = "^1.11.0.post1"
langchain-huggingface = "^0.3.1"
sentence-transformers = "^5.0.0"
ipython = "^9.4.0"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.tencent.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"